--- a/src/components/Closet/Closet.scss
+++ b/src/components/Closet/Closet.scss
@@ -5,14 +5,14 @@
     margin-right: auto;
     #closet-header {
         height: 100px;
-        max-width: 100%;
+        max-width: 1120px;
         margin: 0px 20px auto 20px;
         border-radius: 20px;
         // border: solid red 2px;
         overflow: hidden;
         display: flex;
         #text {
-            max-width: 1200PX;
+            max-width: 100%;
             margin: auto 10px auto 10px;
             display: flex;
             flex-direction: column;
