added public icon button on closet, added share button, changed the send rex button on product

--- a/src/components/AllClosets/AllClosets.scss
+++ b/src/components/AllClosets/AllClosets.scss
@@ -85,6 +85,10 @@
                     left: 160px;
                     // border: solid red 2px;
                 }
+                .share-button {
+                    background-color: black;
+                    color: white;
+                }
                 // background-color: rosybrown;
             }
             #closet-name {
