--- a/src/components/Closet/Closet.scss
+++ b/src/components/Closet/Closet.scss
@@ -4,16 +4,20 @@
     margin-left: auto;
     margin-right: auto;
     #closet-header {
-        height: 100px;
+        height: 150px;
         max-width: 1120px;
         margin: 0px 20px auto 20px;
         border-radius: 20px;
         // border: solid red 2px;
         overflow: hidden;
         display: flex;
+        // background: rgb(20, 196, 178);
+        // background: linear-gradient(135deg, rgba(20, 196, 178, 1) 35%, rgba(0, 212, 255, 1) 100%);
+        // background: rgb(255, 108, 115);
+        // background: linear-gradient(166deg, rgba(255, 108, 115, 1) 35%, rgba(255, 204, 119, 1) 100%);
         #text {
             max-width: 100%;
-            margin: auto 10px auto 10px;
+            margin: 20px auto auto 10px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -38,7 +42,7 @@
             // border: solid red 1px;
             height: 50px;
             width: 50px;
-            margin: auto 0px auto 20px;
+            margin: 10px 0px auto 20px;
             color: white;
         }
         #edit-form-button {
@@ -47,11 +51,16 @@
             // top: 20px;
             // border: solid rgb(90, 90, 90) 2px;
             color: white;
-            height: 50px;
+            height: 40px;
             width: 50px;
-            margin-top: 25px;
-            margin-right: 15px;
+            margin-top: 15px;
+            margin-right: 20px;
             margin-left: auto;
+            font-family: 'Baloo 2';
+            text-transform: none;
+            background-color: white;
+            font-size: 20px;
+            border-radius: 25px;
         }
         #img {
             width: 200px;
@@ -196,4 +205,8 @@
             font-weight: 700;
         }
     }
+}
+
+Button {
+    font-family: 'Baloo 2'
 }
