--- a/src/components/Closet/Closet.scss
+++ b/src/components/Closet/Closet.scss
@@ -34,6 +34,7 @@
                 font-size: calc(28px + 1.5vw);
                 font-weight: 600;
                 line-height: 40px;
+                margin: auto;
                 text-align: left;
                 user-select: none;
             }
